<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Red"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/Red2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="214dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/pril"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dla"
        android:layout_width="112dp"
        android:layout_height="27dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/dla"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/fit"
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/Fit"
        android:textColor="@color/MidnightBlue"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dla" />

    <Button
        android:id="@+id/button_camera"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/Gray"
        android:fontFamily="@font/montserrat"
        android:text="@string/cam"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/light"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/main_scene"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:contentDescription="menu"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:rotation="0"
        app:layout_constraintBottom_toTopOf="@+id/button_camera"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="65dp"
        android:contentDescription="@string/Caseta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:srcCompat="@drawable/ic_molumen_audio_cassette" />

    <Button
        android:id="@+id/contacts"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/Red2"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:rotation="0"
        android:scrollbarSize="4dp"
        android:shadowColor="@color/black"
        android:text="@string/contacts_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintStart_toEndOf="@+id/main_scene" />

    <Button
        android:id="@+id/main_scene"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/Red2"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:rotation="0"
        android:scrollbarSize="4dp"
        android:shadowColor="@color/black"
        android:text="@string/main_scene_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>